--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,23 @@
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+}
+
 .App {
   width: 100vw;
   height: auto;
@@ -5,6 +25,7 @@
   align-items: center;
   flex-direction: column;
 }
+
 
 /* NAVBAR */
 
@@ -49,6 +70,7 @@
   margin-right: 10px;
   color: white;
   font-weight: lighter;
+  font-size: medium;
 }
 
 /* REGISTER */
@@ -91,4 +113,117 @@ button {
 
 .loginContainer input {
   border: 2px solid dodgerblue;
+}
+
+/* PROFILE OVERVIEW */
+
+.pOverwievWrapper{
+  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.profile {
+  width: 20%;
+  height: 30%;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: 2%;
+  border: 1px solid lightgray;
+  font-family: Arial, Helvetica, sans-serif;
+
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.profile:hover {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  cursor: pointer;
+}
+.profile .title {
+  flex: 20%;
+  border-bottom: 1px solid lightgray;
+  background-color: dodgerblue;
+  display: grid;
+  place-content: center;
+  color: white;
+}
+
+.profile .body {
+  height: 70%;
+  flex: 60%;
+  display: grid;
+  place-content: center;
+}
+
+.profile .footer {
+  flex: 20%;
+  border-top: 1px solid lightgray;
+  display: flex;
+  padding-left: 2%;
+  background-color: dodgerblue;
+  color: white;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+/* PROFILE PAGE */
+
+.profilePage{
+  width: 100%;
+  height: 100%;
+}
+
+.profileTop{
+  margin-top: 1%;
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
+  overflow: hidden;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border: 1px solid lightgray;
+}
+
+.profileTop .profilePic{
+  margin: 1%;
+  width: 46%;
+  float: left;
+}
+
+.profileTop .animalData{
+  margin: auto;
+  width: 25%;
+  height: auto;
+  display: grid;
+  float:left;
+}
+
+.profileTop .animalData > div {
+  text-align: left;
+  margin-left: 10%;
+  margin-top: 13%;
+  margin-bottom: 5%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.profileMiddle{
+  margin-top: 1%;
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
+  overflow: hidden;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border: 1px solid lightgray;
+}
+
+.profileMiddle > h3{
+  margin: 1%;
+}
+
+.profileMiddle > div{
+  text-align: left;
+  margin: 2%;
+  margin-left: 3%;
+  font-family: Arial, Helvetica, sans-serif;
 }
